--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=notification-service
 server.port=8083
+
+spring.kafka.consumer.bootstrap-servers= localhost:9092
+spring.kafka.consumer.group-id=notification
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+
+spring.kafka.consumer.properties.spring.json.value.default.type=com.example.notification_service.thirdParty.dto.AccountEvent
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.notification_service.thirdParty.dto,*
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+
+# Ton topic
+spring.kafka.topic.name=topic-bankingApp
