feat: add prometheus server + grafana dashboard

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.kafka.consumer.properties.spring.json.use.type.headers=false
 
 # Ton topic
 spring.kafka.topic.name=topic-bankingApp
+
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
